2002-06-30  Gary Houston  <ghouston@arglist.com>

	* posix.c (scm_convert_exec_args), dynl.c
	(scm_make_argv_from_stringlist): static procs: 1) renamed both to
	allocate_string_pointers.  2) simplified: don't reallocate the
	strings, just make an array of pointers 3) avoid memory leaks on
	error 4) let the procedure report errors in its own name.
	Consequences: 1) the procedures now assume that SCM strings are
	nul-terminated, which should always be the case.  2) Since strings
	are not reallocated, it's now possible for strings passed to
	dynamic-args-call to be mutated.

2002-06-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h, eval.c, eval.h:  Removed compile time option
	MEMOIZE_LOCALS to clean up the code.  Now, caching of local
	variable positions during memoization is mandatory.  However, the
	option to disable the caching has most probably not been used
	anyway.

2002-06-18  Marius Vollmer  <mvo@zagadka.ping.de>

	* print.c (scm_simple_format): Print missing part of format before
	~% control.  Thanks to Daniel Skarda!

2002-06-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* mkstemp.c: Added exception notice to license statement.

2002-05-22  Marius Vollmer  <mvo@zagadka.ping.de>

	* numbers.c (mem2ureal): When returning an inexact zero, make sure
	it is represented as a floating point value so that we can change
	its sign.

        From John W. Eaton  <jwe@bevo.che.wisc.edu>

	* numbers.c (idbl2str): Don't omit sign when printing negative zero.

2002-05-14  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* gc_os_dep.c: For I386/OPENBSD, allow for `__i386__'
	in addition to `i386'.  Thanks to Dale P. Smith.

2002-05-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* eq.c (real_eqv): New.
	(scm_eqv_p): Use it when comparing reals and complexes.

	* numbers.c: Include <string.h>, for strncmp.
	(mem2complex): Do not create negative NaNs.
	(scm_leq_p, scm_geq_p): Explicitely return #f when comparing a
	NaN.
	(scm_inexact_to_exact): Signal error when converting a NaN.
